--- a/hono-vite-sample/package.json
+++ b/hono-vite-sample/package.json
@@ -4,18 +4,15 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run server:dev\" \"vite\"",
-    "server:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc && vite build",
-    "start": "node dist/server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "hono": "^3.6.0"
   },
   "devDependencies": {
     "vite": "^5.0.0",
-    "typescript": "^5.0.0",
-    "ts-node-dev": "^2.0.0",
-    "concurrently": "^8.0.0"
+    "typescript": "^5.0.0"
   }
 }
