--- a/package.json
+++ b/package.json
@@ -1,17 +1,1 @@
-{
-  "name": "typescript",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type":"module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/node": "^24.10.1",
-    "typescript": "^5.9.3"
-  }
-}
+{"name":"hono-vite-sample","version":"0.0.0","private":true,"type":"module","scripts":{"dev":"vite"},"dependencies":{"hono":"^4.0.0"},"devDependencies":{"@hono/vite-dev-server":"^0.4.0","vite":"^5.0.0","typescript":"^5.0.0"}}
